modified text on about page and 404 page.

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -23,8 +23,8 @@ const quickLinks = [
 
 <Main title="Page not found">
   <section class="stack gap-lg">
-    <h1>Hey, sorry about this, but we could not find that page!</h1>
-    <p>The link may be broken, or the page may have been moved or deleted.</p>
+    <h1>Hey, sorry about this, but we could not find that page.</h1>
+    <p>The link may be broken, or the page may have been moved or deleted. Try one of these links below instead!</p>
 
     <nav aria-label="Helpful links" class="quick-link-nav">
       <ul class="question-list quick-link-list">
