change zeffy text

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -22,7 +22,7 @@ abolition.ing is maintained by followers of Christ who desire to see His bride p
 Contact us via email at abereanone (at) pm (dot) me.
 </p>
 <p>
-Donations are never required, but if you want to colabor with us we will use any funds for God's glory. We use a secure payment processor called <a href="https://www.zeffy.com/en-US/referral?referredByOrganizationId=4c5e3aa2-763d-407c-973c-19e522a3f5c1" target="blank">https://zeffy.com</a>.
+Donations are never required, but if you want to colabor with us we will use any funds for God's glory. We use a secure payment processor called <a href="https://www.zeffy.com/en-US/referral?referredByOrganizationId=4c5e3aa2-763d-407c-973c-19e522a3f5c1" target="blank">Zeffy</a> that does not charge fees to non-profits.
 </p>
 <div style="position:relative;overflow:hidden;height:450px;width:100%;"><iframe title='Donation form powered by Zeffy' style='position: absolute; border: 0; top:0;left:0;bottom:0;right:0;width:100%;height:100%' src='https://www.zeffy.com/embed/donation-form/support-the-abolitioning-website' allowpaymentrequest allowTransparency="true"></iframe></div>
   </section>
