--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -7,6 +7,7 @@
     <a href="/">Home</a>
     <a href="/resources">Resources</a>
     <a href="/about">About</a>
+    <a href="/search">Search</a>
   </nav>
 </header>
 
