--- a/src/pages/resources.astro
+++ b/src/pages/resources.astro
@@ -1,11 +1,13 @@
 ---
 import Main from "@/layouts/Main.astro";
 import { listAuthors } from "@/lib/questions";
+import { siteSettings } from "@/config/siteSettings";
 
 const authors = listAuthors();
+const siteName = siteSettings.branding.siteName;
 ---
 
-<Main title="Resources - abolition.ing">
+<Main title={`Resources | ${siteName}`}>
   <h1>Resources & Contributors</h1>
   <p>Here are some additional resources you may benefit from, as well as a list of the authors of the answers on this site.</p>
   {authors.length ? (
