--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,10 +1,18 @@
+---
+import { siteSettings } from "@/config/siteSettings";
+
+const siteName = siteSettings.branding.siteName;
+const legalText = siteSettings.footer.legalText;
+const legalLinkLabel = siteSettings.footer.legalLinkLabel;
+---
+
 <footer class="site-footer">
   <div class="footer-search">
     <a href="/search" class="footer-search-link">Search questions</a>
   </div>
   <p>
-    <a href="/about">abolition.ing</a> - For copyright/licensing information
-    <a href="/copyright">click here.</a>
+    <a href="/about">{siteName}</a> - {legalText}
+    <a href="/copyright">{legalLinkLabel}</a>
   </p>
 </footer>
 
