--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -1,11 +1,14 @@
 ---
 import NavBar from "@/components/NavBar.astro";
 import Footer from "@/components/Footer.astro";
+import { siteSettings } from "@/config/siteSettings";
 
+const branding = siteSettings.branding;
 const {
-  title = "abolition.ing",
-  description = "Questions & Answers about abortion abolition",
+  title = branding.siteName,
+  description = branding.description,
 } = Astro.props;
+const analyticsId = siteSettings.integrations.googleAnalyticsId;
 
 const duplicateReport =
   (
@@ -33,15 +36,17 @@ const duplicateReportPayload = duplicateReport ? JSON.stringify(duplicateReport)
     />
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0JVE2NPH9S"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        window.dataLayer.push(arguments);
-      }
-      gtag('js', new Date());
-      gtag('config', 'G-0JVE2NPH9S');
-    </script>
+    {analyticsId ? (
+      <>
+        <script async src={`https://www.googletagmanager.com/gtag/js?id=${analyticsId}`}></script>
+        <script is:inline>
+          {`window.dataLayer = window.dataLayer || [];
+          function gtag(){window.dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', '${analyticsId}');`}
+        </script>
+      </>
+    ) : null}
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
