increase footer height

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -20,6 +20,7 @@ const legalLinkLabel = siteSettings.footer.legalLinkLabel;
   .site-footer {
     text-align: center;
     margin-top: 2rem;
+    padding-bottom: 4rem;
   }
 
   .footer-search {
