reposition search button on slug

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -41,7 +41,7 @@ const siteName = siteSettings.branding.siteName;
       Contact us via email at abereanone (at) pm (dot) me.
     </p>
     <p>
-      Donations are never required, but if you want to collaborate with us we will use any funds for God's
+      Donations are never required, but if you want to co-labor with us we will use all the funds for God's
       glory. We use a secure payment processor called
       <a href="https://www.zeffy.com/en-US/referral?referredByOrganizationId=4c5e3aa2-763d-407c-973c-19e522a3f5c1" target="blank">Zeffy</a>
       that does not charge fees to non-profits.
