--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ const legalLinkLabel = siteSettings.footer.legalLinkLabel;
 
 <footer class="site-footer">
   <div class="footer-search">
-    <a href="/search" class="footer-search-link">Search questions</a>
+    <a href="/search" class="footer-search-link">Search {siteName}</a>
   </div>
   <p>
     <a href="/about">{siteName}</a> - {legalText}
